src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>MX_WB_txt_NumContratante__c</fullName>
        <description>Nuevo campo para identificar el Número de contratante para Telemarketing</description>
        <label>Número de Contratante</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Prefijo_1__c</fullName>
        <description>Campo de telemarketing prefijo 1</description>
        <label>Prefijo 1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Prefijo_2__c</fullName>
        <description>Campo de telemarketing prefijo 2</description>
        <label>Prefijo 2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_txt_Prefijo_3__c</fullName>
        <description>Campo de telemarketing prefijo 3</description>
        <label>Prefijo 3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>MX_BPP_Casilla__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nuevo campo BPYP para identificar cuando un registro Prospecto o Cliente tiene asociado un plan de cuenta</description>
        <label>BPYP Casilla</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Agencia__c</fullName>
        <label>Agencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Desclub</fullName>
                </value>
                <value>
                    <fullName>EG+</fullName>
                </value>
                <value>
                    <fullName>Marketing 911</fullName>
                </value>
                <value>
                    <fullName>Salesforce Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_express__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banca express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_patrimonial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banca patrimonial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_personal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banca personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_personal_plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banca personal plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_privada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banca privada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bancario_alto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bancario alto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bancario_bajo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bancario bajo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bancario_estandar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bancario estandar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Comercio_BUC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comercio BUC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Comercio_WALLET_relacionado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comercio WALLET relacionado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MX_WF_Catalogo_Comercios_Wallet__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Catálogo de Comercios</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MX_WF_Catalogo_Comercios_Wallet__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WF_Keywords__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Micronegocio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Micronegocio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Micronegocio_bajo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Micronegocio bajo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Mono_finanzia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mono finanzia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Negocio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negocio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Palabra_clave__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Palabra clave</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Pyme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pyme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Pyme_plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pyme plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Pyme_plus_plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pyme plus plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Rese_a_de_comercio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reseña de comercio</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_WF_Tipo_De_Servicio__c</fullName>
        <label>Tipo de Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ConnectDirect</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Url_Comercio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Url Comercio</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_WF_Url_Logo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Url Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Nacionalidad__c</fullName>
        <description>Nacionalidad de Cliente.</description>
        <label>Nacionalidad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_de_cliente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>No. de cliente</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_de_Grupo__c</fullName>
        <formula>MX_GroupItBelongs__r.No_de_cliente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. de Grupo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_de_nomina__c</fullName>
        <formula>Owner.No_de_nomina__c</formula>
        <label>No. de nómina</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_Ejecutivo__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; OwnerId,Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre del ejecutivo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nombreIntermediario__c</fullName>
        <description>Nombre intermediario de póliza de auto.</description>
        <label>Nombre Intermediario</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Opps__c</fullName>
        <description>Campo fórmula que cuenta el número de oportunidades.</description>
        <label>Num Opps</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numero_de_Cuenta__c</fullName>
        <displayFormat>WIB-{MM}{DD}{00000}</displayFormat>
        <label>Numero de Cuenta</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Numero_Exterior__c</fullName>
        <description>Número exterior del domicilio de cliente.</description>
        <label>Número Exterior</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Interior__c</fullName>
        <description>Número interior del domicilio de cliente.</description>
        <label>Número Interior</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Oficina</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina1__c</fullName>
        <formula>TEXT(Owner.Oficina__c )</formula>
        <label>Oficina Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oportunidad_Totales__c</fullName>
        <label>Oportunidad Totales</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oportunidades_Abierta__c</fullName>
        <label>Oportunidades Abierta</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Producto en uso, Crédito dispuesto, Descartada / Rechazada, Producto en uso, Crédito dispuesto, Cerrada Ganada</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oportunidades_Cerrada_Ganada__c</fullName>
        <description>Cuenta el total de oportunidades en la Etapa Producto en uso, Crédito dispuesto, Cerrada Ganada asociadas al registro del cliente</description>
        <label>Oportunidades Cerrada/Ganada</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Producto en uso, Crédito dispuesto, Cerrada Ganada</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oportunidades_Descartadas__c</fullName>
        <description>Cuenta el total de oportunidades en la Etapa Descartada / Rechazada asociadas al cliente</description>
        <label>Oportunidades Descartadas</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Descartada / Rechazada</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Origen_del_candidato__c</fullName>
        <label>Origen del candidato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detección propia</fullName>
                </value>
                <value>
                    <fullName>Referido</fullName>
                </value>
                <value>
                    <fullName>Sinergia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>País</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_GroupItBelongs__c</fullName>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>PrimerPropietario__c</fullName>
        <label>Primer Propietario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profesion__c</fullName>
        <description>Profesión del cliente.</description>
        <label>Profesión</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propietario_del_cliente__c</fullName>
        <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario del cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropietarioInactivo__c</fullName>
        <formula>IF(Owner.IsActive = false, &apos;SI&apos;,&apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario Inactivo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pyme_Cliente_en_Gesti_n__c</fullName>
        <description>Indica si el cliente tuvo seguimiento</description>
        <formula>OR(IF((Pyme_Total_Oportunidades__c  &gt;  0),  true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente en Gestión</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pyme_Total_Oportunidades__c</fullName>
        <description>Total de Oportunidades Pyme gestionadas</description>
        <label>Total_Oportunidades_Pyme</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_Registro_Manual2__c</field>
            <operation>equals</operation>
            <value>Banca Electrónica PyME, CIE PyME, Domiciliación PyME, Financiamiento PyME, Inversiones PyME, Tarjetas de Crédito PyME, Vista PyME</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rango_de_ventas__c</fullName>
        <label>Rango de ventas M.N.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No ID</fullName>
                </value>
                <value>
                    <fullName>Menos de 30&apos;0</fullName>
                </value>
                <value>
                    <fullName>De 30&apos;0 a 60&apos;0</fullName>
                </value>
                <value>
                    <fullName>De 60&apos;0 a 100&apos;0</fullName>
                </value>
                <value>
                    <fullName>De 100&apos;0 a 300&apos;0</fullName>
                </value>
                <value>
                    <fullName>Más de 300&apos;0</fullName>
                </value>
                <value>
                    <fullName>Menor a 20M</fullName>
                </value>
                <value>
                    <fullName>De  20M-30M</fullName>
                </value>
                <value>
                    <fullName>De 30M-40M</fullName>
                </value>
                <value>
                    <fullName>De  40M-50M</fullName>
                </value>
                <value>
                    <fullName>De  50M-60M</fullName>
                </value>
                <value>
                    <fullName>Mas de 60M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Razon_social__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Razon social</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recuperacion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Muestra si el auto fue recuperado de un siniestro.</description>
        <label>Recuperacion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFC__c</fullName>
        <description>RFC de cliente.</description>
        <label>RFC</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saneamiento_del_cliente__c</fullName>
        <description>Saneamiento del cliente campo saneamiento</description>
        <inlineHelpText>Saneamiento informativo con cierre al mes anterior</inlineHelpText>
        <label>Saneamiento del cliente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Información sector del cliente definido desde el Data Mart</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmento__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Segmento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_Celular2__c</fullName>
        <description>Teléfono móvil de cliente</description>
        <label>Teléfono Celular 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_Oficina__c</fullName>
        <description>Teléfono de oficina de cliente.</description>
        <label>Teléfono de Oficina</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Plan__c</fullName>
        <description>Cobertura de plan.</description>
        <label>Tipo de Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Esencial</fullName>
                </value>
                <value>
                    <fullName>Basico</fullName>
                </value>
                <value>
                    <fullName>Amplio</fullName>
                </value>
                <value>
                    <fullName>Amplio Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_registro_Candidato__c</fullName>
        <label>Tipo de registro Candidato</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Registro_Manual__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de Registro Manual</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Persona__c</fullName>
        <description>Persona Física o Moral</description>
        <label>Tipo de Persona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Física</fullName>
                    <default>true</default>
                    <label>Física</label>
                </value>
                <value>
                    <fullName>Moral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UG__c</fullName>
        <formula>Owner.UG__c</formula>
        <label>UG</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Agencias_WF</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.GBL_WF_Agencia</value>
        </filters>
        <label>Agencias WF</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>MX_WF_Tipo_De_Servicio__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>GBL_WF_Squad_Producto__c</columns>
        <columns>GBL_WF_Squad_Journey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Comercios_WF</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>GBL_WF_Canal__c</columns>
        <columns>GBL_WF_Canales_De_Comunicacion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.GBL_WF_Agencia,Account.GBL_WF_Comercios,Account.GBL_WF_Grupos_Comerciales,Account.GBL_WF_Proveedores,Account.GBL_WF_Area_Solicitante</value>
        </filters>
        <label>Cuentas WF</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Proveedores</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>GBL_WF_Canales_De_Comunicacion__c</columns>
        <columns>MX_WF_Tipo_De_Servicio__c</columns>
        <columns>GBL_WF_Squad_Producto__c</columns>
        <columns>GBL_WF_Squad_Journey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.GBL_WF_Proveedores</value>
        </filters>
        <filters>
            <field>GBL_WF_Vigente__c</field>
            <operation>equals</operation>
            <value>Sí</value>
        </filters>
        <label>Proveedores</label>
    </listViews>
    <recordTypes>
        <fullName>BPyP_tre_Cliente</fullName>
        <active>true</active>
        <description>Tipo de registro para clientes de BPyP - Personas morales</description>
        <label>Cliente BPyP - Morales</label>
    </recordTypes>
    <recordTypes>
        <fullName>BPyP_tre_familyGroup</fullName>
        <active>true</active>        <!-- <compactLayoutAssignment>BPyP_fco_Family_Group</compactLayoutAssignment> -->
        <description>Tipo de registro para family groups de BPyP</description>
        <label>Family Group BPyP</label>
    </recordTypes>
    <recordTypes>
        <fullName>BPyP_tre_noCliente</fullName>
        <active>true</active>
        <description>Tipo de registro para candidatos de BPyP - Personas morales</description>
        <label>Prospecto BPyP - Morales</label>
    </recordTypes>
    <recordTypes>
        <fullName>business_account</fullName>
        <active>true</active>
        <description>Registro default para cuentas empresariales</description>
        <label>business account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cliente_Empresarial</fullName>
        <active>true</active>
        <label>Cliente Empresarial</label>
    </recordTypes>
    <recordTypes>
        <fullName>GBL_WF_Agencia</fullName>
        <active>true</active>
        <description>Tipo de registro para Agencias en la Aplicación Workflow Campañas</description>
        <label>Agencia</label>
    </recordTypes>
    <recordTypes>
        <fullName>GBL_WF_Area_Solicitante</fullName>
        <active>true</active>
        <description>Tipo de registro para Áreas Solicitantes en la Aplicación Workflow Campañas</description>
        <label>Área Solicitante</label>
    </recordTypes>
    <recordTypes>
        <fullName>GBL_WF_Comercios</fullName>
        <active>true</active>
        <description>Tipo de registro para Comercios en la Aplicación Workflow Campañas</description>
        <label>Comercios</label>
    </recordTypes>
    <recordTypes>
        <fullName>GBL_WF_Grupos_Comerciales</fullName>
        <active>true</active>
        <description>Tipo de registro para Grupos Comerciales en la Aplicación Workflow Campañas</description>
        <label>Grupos Comerciales</label>
    </recordTypes>
    <recordTypes>
        <fullName>GBL_WF_Proveedores</fullName>
        <active>true</active>
        <description>Tipo de registro para Proveedores en la Aplicación Workflow Campañas</description>
        <label>Proveedores</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grupo</fullName>
        <active>true</active>        <!-- <compactLayoutAssignment>dwp_cglp__Group_Compact_Layout</compactLayoutAssignment> -->
        <description>Grupos de clientes</description>
        <label>Grupo</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_RTE_RTE</fullName>
        <active>true</active>
        <description>Tipo de registro utilizado para el WF RTE</description>
        <label>RTE</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WB_rt_Acc_Telemarketing</fullName>
        <active>false</active>
        <label>Outbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_tre_Cliente_PyME</fullName>
        <active>true</active>
        <description>Clientes PyME</description>
        <label>Cliente PyME</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_tre_Grupo_PyME</fullName>
        <active>true</active>
        <description>Grupo de Clientes PyME</description>
        <label>Grupo PyME</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BPyP_at_Otros_factores</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name = &quot;Candidato BPyP&quot;,ISPICKVAL(BPyP_ls_Motivo__c , &quot;Otros factores de descarte&quot;),BPyP_at_Otros_factores__c =  &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>BPyP_at_Otros_factores__c</errorDisplayField>
        <errorMessage>Debe rellenar este campo si el Motivo seleccionado es &quot; Otros factores de descarte&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_Cliente_principal</fullName>
        <active>true</active>
        <description>Deshabilitar el campo si es cliente principal del grupo</description>
        <errorConditionFormula>AND(BPyP_ca_Es_cliente_principal_del_grupo__c = TRUE,  BPyP_Rb_Cliente_principal_del_family__c &lt;&gt; &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>BPyP_Rb_Cliente_principal__c</errorDisplayField>
        <errorMessage>No puede relacionarlo a un cliente principal si este cliente es principal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_Descarte_nuevo_candidato</fullName>
        <active>true</active>
        <description>No se puede dar de alta un candidato en el estado &quot;Descartado&quot;</description>
        <errorConditionFormula>AND( (RecordType.DeveloperName  = &quot;BPyP_tre_noCliente&quot; || RecordType.DeveloperName  = &quot;MX_BPP_PersonAcc_NoClient&quot;), ISNEW(), ISPICKVAL( BPyP_ls_Estado_del_candidato__c , &quot;Descartado&quot;))</errorConditionFormula>
        <errorDisplayField>BPyP_ls_Estado_del_candidato__c</errorDisplayField>
        <errorMessage>No se puede dar de alta un candidato en el estado &quot;Descartado&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_Motivo_Depende_etapa_desc</fullName>
        <active>true</active>
        <description>No puede poner motivo de descarte si el candidato no es descartado</description>
        <errorConditionFormula>AND( (RecordType.DeveloperName = &quot;BPyP_tre_noCliente&quot; || RecordType.DeveloperName = &quot;MX_BPP_PersonAcc_NoClient&quot;),NOT(ISPICKVAL( BPyP_ls_Estado_del_candidato__c,&quot;Descartado&quot;)),NOT(ISBLANK( TEXT (BPyP_ls_Motivo__c))))</errorConditionFormula>
        <errorDisplayField>BPyP_ls_Motivo__c</errorDisplayField>
        <errorMessage>No puede poner motivo de descarte si el candidato no es descartado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_Motivo</fullName>
        <active>true</active>
        <description>Si el Estado es igual a Descartado este campo no puede ir vacio</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;Candidato BPyP&quot;,ISPICKVAL(BPyP_ls_Estado_del_candidato__c , &quot;Descartado&quot;),ISPICKVAL( BPyP_ls_Motivo__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>BPyP_ls_Motivo__c</errorDisplayField>
        <errorMessage>Debe rellenar este campo si el Estatus es &quot;Descartado&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_rva_MotivoDescarte</fullName>
        <active>true</active>
        <description>Si el Estado es igual a Descartado este campo no puede ir vacio</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;Prospecto BPyP&quot;,ISPICKVAL(BPyP_ls_Estado_del_candidato__c , &quot;Descartado&quot;),ISPICKVAL( BPyP_ls_Motivo__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>BPyP_ls_Motivo__c</errorDisplayField>
        <errorMessage>Debe rellenar este campo si el Estatus es &quot;Descartado&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_No_puede_cambiar_el_cliente_pr</fullName>
        <active>true</active>
        <description>No puede cambiar el cliente principal</description>
        <errorConditionFormula>ISCHANGED (BPyP_Rb_Cliente_principal_del_family__c)</errorConditionFormula>
        <errorDisplayField>BPyP_Rb_Cliente_principal_del_family__c</errorDisplayField>
        <errorMessage>No puede cambiar el cliente principal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_No_puede_cambiar_el_grupo</fullName>
        <active>true</active>
        <description>No puede cambiar ni borrar el grupo al que pertenece</description>
        <errorConditionFormula>AND( OR(RecordType.DeveloperName = &quot;BPyP_tre_Cliente&quot;,RecordType.DeveloperName = &quot;BPyP_tre_noCliente&quot;,RecordType.DeveloperName = &quot;MX_BPP_PersonAcc_Client&quot;,RecordType.DeveloperName = &quot;MX_BPP_PersonAcc_NoClient&quot;), ISCHANGED( Grupo_al_que_pertenece__c ))</errorConditionFormula>
        <errorDisplayField>MX_GroupItBelongs__c</errorDisplayField>
        <errorMessage>No puede cambiar ni borrar el grupo al que pertenece</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_No_rellenar_depende_etapa</fullName>
        <active>true</active>
        <description>No puede rellenar este campo si no esta descartado el candidato</description>
        <errorConditionFormula>AND( OR(RecordType.DeveloperName = &quot;BPyP_tre_noCliente&quot;,RecordType.DeveloperName = &quot;MX_BPP_PersonAcc_NoClient&quot;),NOT(ISPICKVAL( BPyP_ls_Estado_del_candidato__c,&quot;Descartado&quot;)),ISPICKVAL(  BPyP_ls_Motivo__c ,&quot;Otros factores de descarte&quot;))</errorConditionFormula>
        <errorDisplayField>BPyP_at_Otros_factores__c</errorDisplayField>
        <errorMessage>No puede rellenar este campo si no esta descartado el candidato</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_No_se_puede_cambiar_nombre</fullName>
        <active>true</active>
        <description>No se puede cambiar el nombre del registro una vez que sea cliente</description>
        <errorConditionFormula>AND( OR(RecordType.DeveloperName = &quot;BPyP_tre_Cliente&quot;,RecordType.DeveloperName = &quot;BPyP_tre_familyGroup&quot;,RecordType.DeveloperName = &quot;MX_BPP_PersonAcc_Client&quot;), ISCHANGED( Name ))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>No se puede cambiar el nombre del cliente</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_rva_NoCambiarPropietario</fullName>
        <active>true</active>
        <description>Regla de validacion para que los banqueros de la Banca Patrimonial y Privada no cambien el Propietario del Cliente</description>
        <errorConditionFormula>$Profile.Name = &quot;BPyP Estandar&quot; &amp;&amp; ISCHANGED(Propietario_del_cliente__c)</errorConditionFormula>
        <errorMessage>No se permite Cambiar propietario</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_Parentesco_con_cliente_principa</fullName>
        <active>true</active>
        <description>Deshabilitar el campo si el clientes es principal</description>
        <errorConditionFormula>AND(BPyP_ca_Es_cliente_principal_del_grupo__c = TRUE,  NOT ( ISPICKVAL(MX_MainClientRelationship__pc,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>MX_MainClientRelationship__pc</errorDisplayField>
        <errorMessage>No puede relacionarlo a un cliente principal si este cliente es principal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BPyP_RVA_Telefono</fullName>
        <active>true</active>
        <description>Valida longitud de caracteres</description>
        <errorConditionFormula>AND(OR(LEN( Phone )  &gt;  12, LEN( Phone ) &lt; 8 ), NOT(ISBLANK(Phone)),  OR( RecordType.Name  = &quot;Prospecto BPyP&quot;, RecordType.Name  = &quot;Cliente BPyP&quot;))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Debe contener mínimo 8 caracteres y máximo 12</errorMessage>
    </validationRules>
</CustomObject>